--- a/dev/deployment.yaml
+++ b/dev/deployment.yaml
@@ -14,6 +14,6 @@ spec:
     spec:
       containers:
       - name: myapp
-        image: alpine:3.15.4
+        image: quay.io/redhatworkshops/bgd:latest
         ports:
         - containerPort: 8080
