--- a/dev/deployment.yaml
+++ b/dev/deployment.yaml
@@ -14,6 +14,6 @@ spec:
     spec:
       containers:
       - name: myapp
-        image: quay.io/redhatworkshops/bgd:latest
+        image: nginx:1.22.0
         ports:
-        - containerPort: 8080
+        - containerPort: 80
