--- a/dev/configmap.yml
+++ b/dev/configmap.yml
@@ -1,6 +1,8 @@
 apiVersion: v1
 kind: ConfigMap
+metadata:
+  name: squid_config 
 data:
-  nginx.conf: |
+  squid.conf: |
     acl mynetwork src 192.168.3.0/24
     http_access allow mynetwork
