--- a/dev/deployment.yaml
+++ b/dev/deployment.yaml
@@ -17,4 +17,9 @@ spec:
         image: nginx:1.23.1
         ports:
         - containerPort: 80
+      volumes:
+        - name: squid-config
+          configMap:
+            # Indiquez le nom de la ConfigMap contenant les fichiers que vous souhaitez ajouter au conteneur
+            name: squid-config
   
