--- a/dev/deployment.yaml
+++ b/dev/deployment.yaml
@@ -6,7 +6,7 @@ spec:
   selector:
     matchLabels:
       app: myapp
-  replicas: 2
+  replicas: 1
   template:
     metadata:
       labels:
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
       - name: myapp
-        image: nginx:1.23.1
+        image: b4tman/squid:5.6
         volumeMounts:
         - name: squid-config
           mountPath: /etc/toto.txt
