--- a/dev/deployment.yaml
+++ b/dev/deployment.yaml
@@ -18,7 +18,7 @@ spec:
         volumeMounts:
         - name: squid-config
           mountPath: /etc/toto.txt
-          subPath: /etc
+          subPath: toto.txt
           readOnly: true
         ports:
         - containerPort: 80
