--- a/dev/deployment.yml
+++ b/dev/deployment.yml
@@ -17,5 +17,8 @@ spec:
       containers:
       - name: squid
         image: b4tman/squid:5.6
+        env:
+          - name: SQUID_CONFIG_FILE
+            value: /etc/mysquid.conf
         ports:
         - containerPort: 3128
