--- a/dev/deployment.yml
+++ b/dev/deployment.yml
@@ -18,7 +18,7 @@ spec:
       - name: squid
         image: b4tman/squid:5.6
         env:
-          - name: SQUID_CONFIG_FILE2
-            value: /etc/mysquid.conf
+          - name: SQUID_CONFIG_FILE
+            value: /etc/squid/squid.conf
         ports:
         - containerPort: 3128
