--- a/dev/deployment.yml
+++ b/dev/deployment.yml
@@ -27,6 +27,6 @@ spec:
         ports:
         - containerPort: 3128
       volumes:
-15      - name: squid-config
-16        configMap:
-17          name: squid-config
+        - name: squid-config
+          configMap:
+            name: squid-config
