--- a/dev/deployment.yml
+++ b/dev/deployment.yml
@@ -19,7 +19,7 @@ spec:
         image: b4tman/squid:5.6
         volumeMounts:
           - name: squid-config
-            mountPath: /etc/squid/mysquid.conf
+            mountPath: /etc/squid/mysquid.conf/
             subPath: mysquid.conf
         env:
           - name: SQUID_CONFIG_FILE
