--- a/dev/configmap.yml
+++ b/dev/configmap.yml
@@ -1,8 +1,8 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: squid-config 
+  name: mysquid.conf
 data:
-  squid.conf: |
+  mysquid.conf: |
     acl mynetwork src 192.168.3.0/24
     http_access allow mynetwork
