--- a/dev/deployment.yml
+++ b/dev/deployment.yml
@@ -18,7 +18,7 @@ spec:
       - name: squid
         image: b4tman/squid:5.6
         volumeMounts:
-          - name: mysquid.conf
+          - name: squid-config
             mountPath: /etc/squid/mysquid.conf
             subPath: mysquid.conf
         env:
@@ -27,6 +27,6 @@ spec:
         ports:
         - containerPort: 3128
       volumes:
-        - name: mysquid.conf
+        - name: squid-config
           configMap:
             name: mysquid.conf
