--- a/dev/configmap.yml
+++ b/dev/configmap.yml
@@ -20,6 +20,8 @@ acl localnet src 192.168.0.0/16         # RFC 1918 local private network (LAN)
 acl localnet src fc00::/7               # RFC 4193 local private network range
 acl localnet src fe80::/10              # RFC 4291 link-local (directly plugged) machines
 
+acl mylab src 192.168.3.0/24
+
 acl SSL_ports port 443
 acl Safe_ports port 80          # http
 acl Safe_ports port 21          # ftp
@@ -59,6 +61,8 @@ http_access deny manager
 # from where browsing should be allowed
 http_access allow localnet
 http_access allow localhost
+
+http_access allow mylab
 
 # And finally deny all other access to this proxy
 http_access deny all
