--- a/dev/service.yml
+++ b/dev/service.yml
@@ -10,3 +10,7 @@ spec:
     - protocol: TCP
       port: 3128
       targetPort: 3128
+  ipFamilies:
+    - IPv4
+  ipFamilyPolicy: SingleStack
+  loadBalancerIP: 192.168.3.201
