--- a/dev/deployment.yml
+++ b/dev/deployment.yml
@@ -24,6 +24,7 @@ spec:
           - name: squid-config
             mountPath: /etc/squid/mysquid.conf
             subPath: mysquid.conf
+            readOnly: true
         env:
           - name: SQUID_CONFIG_FILE
             value: /etc/squid/mysquid.conf
