--- a/dev/deployment.yml
+++ b/dev/deployment.yml
@@ -18,7 +18,8 @@ spec:
     spec:
       containers:
       - name: squid
-        image: b4tman/squid:5.6
+#        image: b4tman/squid:5.6
+        image: fredouye/my-squid:0.1-alpine
         imagePullPolicy: IfNotPresent
         volumeMounts:
           - name: squid-config
