--- a/dev/pvc.yml
+++ b/dev/pvc.yml
@@ -5,6 +5,9 @@ metadata:
 spec:
   accessModes:
     - ReadWriteOnce
+  persistentVolumeReclaimPolicy: Recycle
+  volumeMode: Filesystem
+  storageClassName: longhorn
   resources:
     requests:
       storage: 10Gi
