--- a/dev/pvc.yml
+++ b/dev/pvc.yml
@@ -5,7 +5,7 @@ metadata:
 spec:
   accessModes:
     - ReadWriteOnce
-  persistentVolumeReclaimPolicy: Recycle
+  persistentVolumeReclaimPolicy: Delete
   volumeMode: Filesystem
   storageClassName: longhorn
   resources:
