--- a/dev/deployment.yml
+++ b/dev/deployment.yml
@@ -26,6 +26,8 @@ spec:
             mountPath: /etc/squid/mysquid.conf
             subPath: mysquid.conf
             readOnly: true
+          - name: squid-cache
+            mountPath: /var/cache/squid
         env:
           - name: SQUID_CONFIG_FILE
             value: /etc/squid/mysquid.conf
@@ -38,6 +40,6 @@ spec:
         - name: squid-config
           configMap:
             name: mysquid.conf
-        - name: mysql-persistent-storage
+        - name: squid-cache
           persistentVolumeClaim:
             claimName: squid-cache
