--- a/dev/configmap.yml
+++ b/dev/configmap.yml
@@ -71,6 +71,8 @@ data:
 
     # Uncomment and adjust the following to add a disk cache directory.
     #cache_dir ufs /var/cache/squid 100 16 256
+    # http://www.squid-cache.org/Doc/config/cache_dir/
+    cache_dir ufs /var/cache/squid 1024 16 256
 
     # Leave coredumps in the first cache dir
     coredump_dir /var/cache/squid
