--- a/dev/deployment.yml
+++ b/dev/deployment.yml
@@ -36,6 +36,8 @@ spec:
         ports:
         - containerPort: 3128
           name: squid
+      securityContext:
+        fsGroup: 31
       volumes:
         - name: squid-config
           configMap:
