--- a/dev/deployment.yml
+++ b/dev/deployment.yml
@@ -38,6 +38,16 @@ spec:
           name: squid
       securityContext:
         fsGroup: 31
+      readinessProbe:
+            exec:
+              command:
+                - /usr/bin/pgrep
+                - /usr/sbin/squid
+            failureThreshold: 3
+            initialDelaySeconds: 10
+            periodSeconds: 10
+            successThreshold: 1
+            timeoutSeconds: 1
       volumes:
         - name: squid-config
           configMap:
