--- a/dev/deployment.yml
+++ b/dev/deployment.yml
@@ -39,15 +39,14 @@ spec:
       securityContext:
         fsGroup: 31
       readinessProbe:
-        exec:
-          command:
-          - /usr/bin/pgrep
-          - /usr/sbin/squid
-        failureThreshold: 3
-        initialDelaySeconds: 10
-        periodSeconds: 10
-        successThreshold: 1
-        timeoutSeconds: 1
+          initialDelaySeconds: 1
+          periodSeconds: 5
+          timeoutSeconds: 1
+          successThreshold: 1
+          failureThreshold: 1
+          tcpSocket:
+            host:
+            port: 3128
       volumes:
         - name: squid-config
           configMap:
