--- a/dev/deployment.yml
+++ b/dev/deployment.yml
@@ -18,8 +18,8 @@ spec:
     spec:
       containers:
       - name: squid
-#        image: b4tman/squid:5.6
-        image: fredouye/squid:5.5
+        image: b4tman/squid:5.5
+#        image: fredouye/squid:5.5
         imagePullPolicy: Always
         volumeMounts:
           - name: squid-config
